--- a/css/my_css/webmenu.css
+++ b/css/my_css/webmenu.css
@@ -1,4 +1,4 @@
-.audio_info, .audio_info .artist_name, .audio_info .track_name, .div_volume, .main_controls, .main_controls button, .empty_space {
+.empty_space, .main_controls button, .main_controls, .audio_info .track_name, .audio_info .artist_name, .audio_info {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -8,7 +8,18 @@
   justify-content: center;
   width: 100%;
   margin: 0px;
-  padding: 0px; }
+  padding: 0px;
+}
+
+.main_controls .active_state, .main_controls button:active, .main_controls button:hover, .div_track_progress .progress {
+  background: #d95d39;
+  background: linear-gradient(90deg, #d95d39 0%, #5f0f40 100%);
+}
+
+.main_controls .active_state:hover {
+  background: #5f0f40;
+  background: linear-gradient(90deg, #5f0f40 0%, #d95d39 100%);
+}
 
 .audio_info {
   justify-content: space-evenly;
@@ -20,30 +31,17 @@
   padding-top: 8px;
   padding-bottom: 8px;
   background-color: #1F1F1F;
-  color: #8AC926;
-  z-index: 10; }
-  .audio_info .artist_name {
-    margin-top: 0.5rem;
-    font-size: 1.2rem; }
-  .audio_info .track_name {
-    font-size: 1.6rem;
-    font-weight: bold; }
-
-.div_volume {
-  top: 0;
-  left: 0;
-  right: 0;
-  position: fixed;
-  height: 0.75rem;
-  margin-top: 75px;
-  background-color: #474747;
-  color: #8AC926;
-  cursor: pointer; }
-  .div_volume .volume {
-    width: 0%;
-    height: 100%;
-    background-color: #8AC926;
-    transition: width 0.1s linear; }
+  color: #F18805;
+  z-index: 10;
+}
+.audio_info .artist_name {
+  margin-top: 0.5rem;
+  font-size: 1.2rem;
+}
+.audio_info .track_name {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
 
 .div_track_progress {
   width: 100%;
@@ -56,14 +54,15 @@
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   background-color: #474747;
-  color: #8AC926;
-  cursor: pointer; }
-  .div_track_progress .progress {
-    width: 0%;
-    height: 100%;
-    border-radius: 1rem;
-    background-color: #8AC926;
-    transition: width 0.1s linear; }
+  color: #F18805;
+  cursor: pointer;
+}
+.div_track_progress .progress {
+  width: 0%;
+  height: 100%;
+  border-radius: 1rem;
+  transition: width 0.1s linear;
+}
 
 .main_controls {
   justify-content: space-evenly;
@@ -77,42 +76,49 @@
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
   background-color: #1F1F1F;
-  z-index: 10; }
-  .main_controls button {
-    width: 2.8rem;
-    height: 2.8rem;
-    border: none;
-    border-radius: 100%;
-    font-size: 1.4rem;
-    text-decoration: none;
-    background-color: #474747;
-    color: #8AC926;
-    cursor: pointer;
-    transition: 100ms all; }
-  .main_controls button:hover {
-    background-color: #FFFFFF;
-    color: #1F1F1F;
-    transition: 100ms all; }
-  .main_controls button:active {
-    background-color: #8AC926;
-    color: #000000;
-    transition: 100ms all; }
-  .main_controls .button_play {
-    width: 3.2rem;
-    height: 3.2rem; }
-    .main_controls .button_play i {
-      font-size: 1.6rem; }
-  .main_controls .btn_repeat,
-  .main_controls .btn_shuffle {
-    width: 2.4rem;
-    height: 2.4rem;
-    font-size: 1.2rem; }
-  .main_controls .active_state {
-    background-color: #8AC926;
-    color: #000000;
-    transition: 100ms all; }
+  z-index: 10;
+}
+.main_controls button {
+  width: 2.8rem;
+  height: 2.8rem;
+  border: none;
+  border-radius: 100%;
+  font-size: 1.4rem;
+  text-decoration: none;
+  background-color: #474747;
+  color: #F18805;
+  cursor: pointer;
+  transition: 100ms all;
+}
+.main_controls button:hover {
+  color: #FFFFFF;
+  transition: 100ms all;
+}
+.main_controls button:active {
+  color: #FFFFFF;
+  transition: 100ms all;
+}
+.main_controls .button_play {
+  width: 3.2rem;
+  height: 3.2rem;
+}
+.main_controls .button_play i {
+  font-size: 1.6rem;
+}
+.main_controls .btn_repeat,
+.main_controls .btn_shuffle {
+  width: 2.4rem;
+  height: 2.4rem;
+  font-size: 1.2rem;
+}
+.main_controls .active_state {
+  color: #FFFFFF;
+  transition: 100ms all;
+}
+.main_controls .active_state:hover {
+  transition: 100ms all;
+}
 
 .empty_space {
-  height: 87px; }
-
-/*# sourceMappingURL=webmenu.css.map */
+  height: 88px;
+}/*# sourceMappingURL=webmenu.css.map */
