Fixed website for smartphones and tablets. Improved UI.

--- a/css/my_css/_mixins.scss
+++ b/css/my_css/_mixins.scss
@@ -24,7 +24,7 @@ $main_color: #F18805;
         background: linear-gradient(90deg, rgba(217,93,57,1) 0%, rgba(95,15,64,1) 100%); 
 }
 
-%anti-gradient
+%anti_gradient
 {
         background: rgba(95,15,64,1);
         background: linear-gradient(90deg, rgba(95,15,64,1) 0%, rgba(217,93,57,1) 100%);
