--- a/css/my_css/webmenu.scss
+++ b/css/my_css/webmenu.scss
@@ -6,7 +6,7 @@ $menu_padding_value: 8px;
 
 
 
-.audio_info
+.div_current_track_playing_info
 {
         @extend %flexbox;
         justify-content: space-evenly;
@@ -60,20 +60,17 @@ $menu_padding_value: 8px;
         
         margin-bottom: 3.8rem;
 
-        border-top-left-radius: 1rem;
-        border-top-right-radius: 1rem;
-
         background-color: $dark-grey;
         color: $main_color;
 
         cursor: pointer;
 
-        .progress
+        .progress_bar
         {
                 width: 0%;
                 height: 100%;
 
-                border-radius: 1rem;
+                border-radius: 1rem; // <-- Maybe need fixing.
 
                 @extend %gradient;
 
@@ -84,7 +81,7 @@ $menu_padding_value: 8px;
 
 
 
-.main_controls
+.div_main_controls
 {
         @extend %flexbox;
         justify-content: space-evenly;
@@ -147,14 +144,11 @@ $menu_padding_value: 8px;
                 width: 3.2rem;
                 height: 3.2rem;
 
-                i
-                {
-                        font-size: 1.6rem;
-                }
+                font-size: 1.6rem;
         }
 
-        .btn_repeat,
-        .btn_shuffle
+        .btn_repeat_track,
+        .btn_shuffle_track
         {
                 width: 2.4rem;
                 height: 2.4rem;
